[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=23.0.0",
    "colorlog>=6.7.0",
    "flake8>=6.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]
